--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "thome-os",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "immer": "^10.1.1",
-    "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-variants": "^0.2.1",
-    "xp.css": "^0.2.6",
-    "zustand": "^5.0.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "thome-os",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"immer": "^10.1.1",
+		"next": "14.2.15",
+		"react": "^18",
+		"react-dom": "^18",
+		"tailwind-variants": "^0.2.1",
+		"xp.css": "^0.2.6",
+		"zustand": "^5.0.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.3",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
