--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"immer": "^10.1.1",
+		"motion": "^11.13.1",
 		"next": "14.2.15",
 		"react": "^18",
 		"react-dom": "^18",
